--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ share/python-wheels/
 MANIFEST
 
 main.py
+logs.*
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
